--- a/HTML/home.html
+++ b/HTML/home.html
@@ -8,7 +8,7 @@
           crossorigin="anonymous">
       <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <a href="#" class="navbar-brand">
         <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" width="30" height="30" alt="logo">
@@ -27,7 +27,7 @@
                 <a href="#" class="nav-link">Главная</a>
             </li>
             <li class="nav-item ">
-                <a href="#" class="nav-link">Контакты</a>
+                <a href="contact.html" class="nav-link">Контакты</a>
             </li>
         </ul>
         <form action="" class="form-inline my-2 my-lg-0">
@@ -51,7 +51,7 @@
             <div class="carousel-item active">
                 <img src="img/pic1.jpg" class="d-block w-100 " alt="Первая картинка">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>This is image</h5>
+                    <h5>This is an image</h5>
                     <p></p>
                 </div>
             </div>
@@ -89,6 +89,236 @@ consectetur consequuntur distinctio dolore eligendi eos eveniet expedita harum i
 minus molestias mollitia natus nobis non obcaecati officiis, pariatur placeat quas quidem quo recusandae
 similique sint velit, voluptas. Sit, tempore.
 </div>
+    <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias commodi enim, ex,
+exercitationem facere iusto natus nihil, nostrum nulla quis repellat repellendus? A ab accusantium ad,
+adipisci animi aut autem blanditiis commodi consectetur corporis culpa cum dignissimos dolorem doloremque
+dolores ducimus eligendi error est facere inventore iste itaque laborum maiores minus odit omnis perferendis,
+perspiciatis porro quos repellat sequi tempora totam, vel. Aspernatur aut beatae blanditiis commodi
+consectetur consequuntur distinctio dolore eligendi eos eveniet expedita harum iusto maiores maxime minima
+minus molestias mollitia natus nobis non obcaecati officiis, pariatur placeat quas quidem quo recusandae
+similique sint velit, voluptas. Sit, tempore.
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+  </div>
+</div>
+    <div class="container">
+  <div class="row">
+    <div class="col">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias commodi enim, ex,
+exercitationem facere iusto natus nihil, nostrum nulla quis repellat repellendus? A ab accusantium ad,
+adipisci animi aut autem blanditiis commodi consectetur corporis culpa cum dignissimos dolorem doloremque
+dolores ducimus eligendi error est facere inventore iste itaque laborum maiores minus odit omnis perferendis,
+perspiciatis porro quos repellat sequi tempora totam, vel. Aspernatur aut beatae blanditiis commodi
+consectetur consequuntur distinctio dolore eligendi eos eveniet expedita harum iusto maiores maxime minima
+minus molestias mollitia natus nobis non obcaecati officiis, pariatur placeat quas quidem quo recusandae
+similique sint velit, voluptas. Sit, tempore.
+    </div>
+    <div class="col-6">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias commodi enim, ex,
+exercitationem facere iusto natus nihil, nostrum nulla quis repellat repellendus? A ab accusantium ad,
+adipisci animi aut autem blanditiis commodi consectetur corporis culpa cum dignissimos dolorem doloremque
+dolores ducimus eligendi error est facere inventore iste itaque laborum maiores minus odit omnis perferendis,
+perspiciatis porro quos repellat sequi tempora totam, vel. Aspernatur aut beatae blanditiis commodi
+consectetur consequuntur distinctio dolore eligendi eos eveniet expedita harum iusto maiores maxime minima
+minus molestias mollitia natus nobis non obcaecati officiis, pariatur placeat quas quidem quo recusandae
+similique sint velit, voluptas. Sit, tempore.
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col-5">
+      2 of 3 (wider)
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+  </div>
+</div>
+    <div class="container-fluid mt-5" style="background-color: antiquewhite">
+    <div class="container p-5">
+      <div class="card" style="width: 20rem">
+        <img src="img/pic1.jpg" alt="" class="card-img-top">
+        <div class="card-body">
+          <h4 class="card-title">Заголовок</h4>
+          <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, nesciunt, recusandae.
+              A corporis dolore doloremque eos error esse est expedita, id labore perspiciatis, quaerat quia quibusdam
+              repudiandae, tenetur vero voluptas.</div>
+          <a href="" class="btn btn-primary">Submit</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+<div class="container-fluid mt-5" style="background-color: antiquewhite">
+    <div class="container p-5">
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <img src="img/pic1.jpg" alt="" class="card-img-top">
+            <div class="card-body">
+              <h4 class="card-title">Заголовок</h4>
+              <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, nesciunt, recusandae. A corporis dolore doloremque eos error esse est expedita, id labore perspiciatis, quaerat quia quibusdam repudiandae, tenetur vero voluptas.</div>
+              <a href="" class="btn btn-primary">Отправить</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/pic2.jpg" alt="" class="card-img-top">
+            <div class="card-body">
+              <h4 class="card-title">Заголовок</h4>
+              <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, nesciunt, recusandae. A corporis dolore doloremque eos error esse est expedita, id labore perspiciatis, quaerat quia quibusdam repudiandae, tenetur vero voluptas.</div>
+              <a href="" class="btn btn-primary">Отправить</a>
+            </div>
+          </div>
+        </div>
+          <div class="col">
+          <div class="card">
+            <img src="img/pic3.jpg" alt="" class="card-img-top">
+            <div class="card-body">
+              <h4 class="card-title">Заголовок</h4>
+              <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, nesciunt, recusandae. A corporis dolore doloremque eos error esse est expedita, id labore perspiciatis, quaerat quia quibusdam repudiandae, tenetur vero voluptas.</div>
+              <a href="" class="btn btn-primary">Отправить</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<div class="container">
+    <h1 class="my-3">Последние записи блога</h1>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+                <img src="img/pic1.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                    <h4 class="card-title">Заголовок</h4>
+                    <p class="card-text">Это красткое описание поста. Это красткое описание поста. Это красткое описание поста. </p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <a href="post_detail.html" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                        </div>
+                        <small class="text-muted">22.10.2020</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+                <img src="img/pic2.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                    <h4 class="card-title">Заголовок</h4>
+                    <p class="card-text">Это красткое описание поста. Это красткое описание поста. Это красткое описание поста. </p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <a href="#" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                        </div>
+                        <small class="text-muted">21.10.2020</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+                <img src="img/pic3.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                    <h4 class="card-title">Заголовок</h4>
+                    <p class="card-text">Это красткое описание поста. Это красткое описание поста. Это красткое описание поста. </p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <a href="#" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                        </div>
+                        <small class="text-muted">20.10.2020</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+                <img src="img/first_img.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                    <h4 class="card-title">Заголовок</h4>
+                    <p class="card-text">Это красткое описание поста. Это красткое описание поста. Это красткое описание поста. </p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <a href="#" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                        </div>
+                        <small class="text-muted">19.10.2020</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+                <img src="img/second_image.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                    <h4 class="card-title">Заголовок</h4>
+                    <p class="card-text">Это красткое описание поста. Это красткое описание поста. Это красткое описание поста. </p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <a href="#" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                        </div>
+                        <small class="text-muted">18.10.2020</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+                <img src="img/third_img.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                    <h4 class="card-title">Заголовок</h4>
+                    <p class="card-text">Это красткое описание поста. Это красткое описание поста. Это красткое описание поста. </p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                            <a href="#" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                        </div>
+                        <small class="text-muted">17.10.2020</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<nav aria-label="Paginate me">
+    <ul class="pagination justify-content-center">
+        <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1">Предыдущая</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+            <a class="page-link" href="#">Следующая</a>
+        </li>
+    </ul>
+</nav>
+<br>
+    <footer class="footer">
+    <div class="container">
+        <p class="float-right">
+            <a href="#">Наверх</a>
+        </p>
+        <span class="text-muted">Агентство по разведению котов и кротов. </span>
+    </div>
+</footer>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script src="js/script.js"></script>
